[package]
name = "rcptd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
daemonize = "0.5.0"
kqueue = "1.0.7"
printpdf = { git = "https://github.com/sizeru/printpdf", features = ["svg"] }
scraper = "0.17.1"
