[package]
name = "receiptd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
daemonize = "0.5.0"
kqueue = "1.0.7"
printpdf = { git = "https://github.com/sizeru/printpdf", features = ["svg"] }
regex = "1.9.0"
scraper = "0.17.1"
reqwest = { version = "0.11", features = ["default"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

