[package]
name = "accutools-core"
version = "0.2.2-c"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
number_to_words = "0.1.1"
printpdf = { git = "https://github.com/fschutt/printpdf", features = ["svg"] }